pom: add extra java options for tests